--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
                 <h1 class="text-6xl font-bold">Unleash the full potential of AI</h1>
                 <p class="mt-5 text-1xl font-light text-gray-500 w-9/12">AI Ally is a versatile assistant that utilizes state-of-the art natural language processing to provide real-time assistance accross various domains</p>
                 <div >
-                    <button class="bg-green-500 flex items-center justify-center gap-5 p-4 mt-5 rounded-2xl"> Get the App <img class="h-4" src="Images/Arrow-icon.png">
+                    <button class="bg-green-500 flex items-center justify-center gap-1 text-black p-4 mt-5 rounded-2xl"> Get the App <img class="h-4" src="Images/right-arrow.png">
                     </button>
                     <h3>More</h3>
                 </div>
