--- a/src/index.html
+++ b/src/index.html
@@ -25,18 +25,18 @@
             <div class="w-2/5 ">
                 <h1 class="text-6xl font-bold">Unleash the full potential of AI</h1>
                 <p class="mt-5 text-1xl font-light text-gray-500 w-9/12">AI Ally is a versatile assistant that utilizes state-of-the art natural language processing to provide real-time assistance accross various domains</p>
-                <div >
-                    <button class="bg-green-500 flex items-center justify-center gap-1 text-black p-4 mt-5 rounded-2xl"> Get the App <img class="h-4" src="Images/right-arrow.png">
+                <div class="flex items-start justify-center ">
+                    <button class="bg-green-500 flex items-center justify-center gap-1 text-black h-4 w-4 mt-5 rounded-3xl"> Get the App <img class="h-4" src="Images/right-arrow.png">
                     </button>
-                    <h3>More</h3>
+                    <h3 class="mt-3">More</h3>
                 </div>
-                <div>
+                <div class="flex items-start justify-center gap-3">
                     <div>
-                        <h2>4.8</h2>
+                        <h2 class="text-2xl">4.8</h2>
                         <p>Rating on Appstore</p>
                     </div>
                     <div>
-                        <h2>700k+</h2>
+                        <h2 class="text-2xl">700k+</h2>
                         <p>Active users</p>
                     </div>
                 </div>
