--- a/src/index.html
+++ b/src/index.html
@@ -21,28 +21,29 @@
             <button class="bg-green-500 h-10 w-20 rounded-2xl font-semibold text-base">Sign In</button>
         </nav>
 
-        <div class="p-7 bg-black flex items-center justify-around m-auto w-11/12 rounded-3xl text-white">
+        <div class="p-7 bg-gradient-to-tr bg-black flex items-center justify-around m-auto w-11/12 rounded-3xl text-white">
             <div class="w-2/5 ">
                 <h1 class="text-6xl font-bold">Unleash the full potential of AI</h1>
                 <p class="mt-5 text-1xl font-light text-gray-500 w-9/12">AI Ally is a versatile assistant that utilizes state-of-the art natural language processing to provide real-time assistance accross various domains</p>
-                <div class="flex items-start justify-center ">
-                    <button class="bg-green-500 flex items-center justify-center gap-1 text-black h-4 w-4 mt-5 rounded-3xl"> Get the App <img class="h-4" src="Images/right-arrow.png">
+                <div class="flex items-center justify-start gap-9 mt-10">
+                    <button class="bg-green-500 flex items-center justify-center gap-5 text-xl text-black h-12 w-52 rounded-3xl"> Get the App <img class="h-5" src="Images/right-arrow.png">
                     </button>
-                    <h3 class="mt-3">More</h3>
+                    <h3>More</h3>
                 </div>
-                <div class="flex items-start justify-center gap-3">
+                <div class="flex items-center justify-start gap-10 mt-10 mb-28">
                     <div>
-                        <h2 class="text-2xl">4.8</h2>
+                        <h2 class="text-5xl">4.8</h2>
                         <p>Rating on Appstore</p>
                     </div>
                     <div>
-                        <h2 class="text-2xl">700k+</h2>
+                        <h2 class="text-5xl">700k+</h2>
                         <p>Active users</p>
                     </div>
                 </div>
             </div>
-            <div class="">
-                <img class="h-96" src="Images/hand illustration.png" alt="Illustration">
+            <div class="relative">
+                <img class="h-150" src="Images/hand illustration.png" alt="Illustration">
+                <img class="absolute right-40 top-12 h-96 rounded-2xl" src="Images/Phone.png">
             </div>
             
         </div>
