--- a/src/index.html
+++ b/src/index.html
@@ -9,19 +9,19 @@
     <div class="landing-page">
         <nav class="flex items-center justify-between px-12 m-5">
             <div class="flex gap-1">
-                <img class="h-8 rounded-md" src="Images/Logo.jpg" alt="AI Ally logo">
+                <img class="h-8 rounded-md border" src="Images/Logo.jpg" alt="AI Ally logo">
                 <h3 class="font-bold" >AI Ally</h3>
             </div>
-            <ol class=" flex items-center justify-center gap-4 font-semibold" >
+            <ol class=" flex items-center justify-center gap-6 font-bold" >
                 <li><a href="#">Home</a></li>
                 <li><a href="#">Feature</a></li>
                 <li><a href="#">Pricing</a></li>
                 <li><a href="#">Testimonials</a></li>
             </ol>
-            <button class="bg-green-500 h-10 w-20 rounded-2xl font-semibold text-base">Sign In</button>
+            <button class="bg-green-500 h-10 w-24 rounded-3xl font-semibold text-base">Sign In</button>
         </nav>
 
-        <div class="p-7 bg-gradient-to-tr bg-black flex items-center justify-around m-auto w-11/12 rounded-3xl text-white">
+        <div class="p-7 bg-gradient-to-tr from-slate-900 to-gray-600 flex items-center justify-around m-auto w-98% rounded-3xl text-white">
             <div class="w-2/5 ">
                 <h1 class="text-6xl font-bold">Unleash the full potential of AI</h1>
                 <p class="mt-5 text-1xl font-light text-gray-500 w-9/12">AI Ally is a versatile assistant that utilizes state-of-the art natural language processing to provide real-time assistance accross various domains</p>
@@ -30,13 +30,13 @@
                     </button>
                     <h3>More</h3>
                 </div>
-                <div class="flex items-center justify-start gap-10 mt-10 mb-28">
+                <div class="flex items-center justify-start gap-12 mt-10 mb-24">
                     <div>
-                        <h2 class="text-5xl">4.8</h2>
+                        <h2 class="text-5xl font-bold mb-2">4.8</h2>
                         <p>Rating on Appstore</p>
                     </div>
                     <div>
-                        <h2 class="text-5xl">700k+</h2>
+                        <h2 class="text-5xl font-bold mb-2">700k+</h2>
                         <p>Active users</p>
                     </div>
                 </div>
